[project]
name = "project1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Muhammad Uzair", email = "uzairyasin83@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "crewai>=0.100.1",
    "crewai-tools>=0.33.0",
    "langchain>=0.3.17",
]

[project.scripts]
project1 = "project1:main"
kickoff = "project1.main:main"
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
